src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__class_with_return_type.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
error[E026]: POU Type Class does not support a return type
  ┌─ <internal>:2:21
  │
2 │         CLASS cls : INT
  │                     ^^^ POU Type Class does not support a return type
